# pyfeat-live

./: .gitignore  Detect.py  LICENSE  README.md  RELEASING.md  app.py  basic.prof  conftest.py  gui.py  perf_testing.py  pyoxidizer.bzl  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pyfeatlive.py  run_pyfeatlive.spec  setup.py  utils.py
.github/workflows/: ci.yml  notify-pyfeat.yml  release.yml  verify-runtime-lock.yml
.streamlit/: config.toml
backend/: live_state.py  logbuffer.py  main.py  serialization.py
backend/routers/: __init__.py  analyze.py  annotations.py  generate.py  identities.py  live.py  live_rtc.py  live_rtc_track.py  presets.py  sessions.py  system.py
electron/: package-lock.json  package.json
electron/app/: main.js  main.js.map  preload.js  preload.js.map
electron/resources/: entitlements.mac.plist
electron/scripts/: notarize.js  start.js  webpack.app.config.js  webpack.base.config.js
electron/src/: main.js  window.js
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
hooks/: hook-streamlit.py
logos/: pyfeat_logo_green_shadow.icns
pages/: Analyze.py
pyfeatlive/: Analyze.py  Detect.py  Detect_entry_point.py  __init__.py  __main__.py  analyze.py  app.py  blendshape_to_au.py  detect.py  entry_point.py  labels.py  recorder.py  sessions.py  utils.py  view.py
pyfeatlive_core/: __init__.py  analyze_queue.py  analyze_runner.py  annotations.py  au_heatmap.py  au_mesh.py  capabilities.py  detect.py  detector.py  identities.py  jpeg.py  live_tracker.py  overlay_edges.py  overlay_render.py  overlay_style.py  presets.py  recorder.py  region_mesh.py  session_io.py  sessions.py  thumbnails.py
scripts/: bench_track.py
sidecar/: sidecar.py
tauri/: README.md  UPDATER.md  package-lock.json  package.json  setup-apple-secrets.sh  verify-app.sh
tauri/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  macos_camera.rs  main.rs
(+154 files in other folders)
