[tool.poetry]
name = "pyfeatlive"
version = "0.0.1"
description = "An interactive demo of pyfeat"
authors = ["Eshin Jolly <eshin.jolly@dartmouth.edu>", "Luke Chang <luke.j.chang@dartmouth.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"

[tool.poetry.dev-dependencies]
pyoxidizer = "*"
pre-commit = "*"
black = "23.12.1"

[tool.poetry.scripts]
pyfeatlive = "pyfeatlive.__main__:app"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"