[package]
name = "pyfeatlive-tauri"
version = "0.8.3"
description = "Native desktop wrapper for pyfeatlive"
authors = ["cosanlab"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pyfeatlive_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process", "io-util", "net"] }
log = "0.4"
env_logger = "0.11"

# macOS-only: needed for the WKUIDelegate that auto-grants
# getUserMedia permission inside the WebView. Works around
# Tauri #11951 / wry #1195. Versions match what Tauri 2.11
# pulls transitively, so cargo deduplicates.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKUIDelegate",
    "WKFrameInfo",
    "WKSecurityOrigin",
    "block2",
    "objc2-app-kit",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
